TEST_PROGRAMS/VALID/05/top_var_rune_single_no_init_type.go
/* Types. */

package main

var d rune
   
func main() {
	//x = 1
}
