TEST_PROGRAMS/INVALID/04/10.go
package main

func main() {
    //Illegal line-feed in rune
    var x = '
'
    x++ // "use" x
}
